--- a/src/app/assets/scss/_variables.scss
+++ b/src/app/assets/scss/_variables.scss
@@ -1,6 +1,6 @@
-$dark-bg: #d153fb;
-$light-bg: #ecd1ff;
-$secondary-bg: #fb8aac;
+$dark-bg: #6200ee;
+$light-bg: #fff;
+$secondary-bg: #03dac5;
 $outer-padding: 10px;
 $font-white: #fff;
 $red: #fc3e3e;
