--- a/src/app/components/HomePage/index.module.scss
+++ b/src/app/components/HomePage/index.module.scss
@@ -1,6 +1,6 @@
 .container {
     display: grid;
-    grid-template-columns: min-content auto;
+    grid-template-columns: 200px auto;
 
     .filters {
     }
