--- a/src/app/components/Orders/index.module.scss
+++ b/src/app/components/Orders/index.module.scss
@@ -3,29 +3,47 @@
     font-family: sans-serif;
     
     .order-table {
-
-        border: 1px solid red;
+        
+        width: 100%;
+        border: 1px solid grey;
+        
+        thead {
+            background-color: #c8c6c6;
+            color: #fff;
+        }
 
         th,
         td {
             padding: 20px;
         }
-
+        
         th {
-            text-align: left;
             letter-spacing: 3px;
         }
-
         td {
             text-align: center;
         }
 
         tbody {
-            tr:nth-child(odd) {
+            tr:nth-child(even) {
                 background-color: #c5e1f0;
+            }
+            tr {
 
                 td {
                     border-color: #c5e1f0;
+                    letter-spacing: 1px;
+                }
+                
+                td:has(img) {
+                    width: 200px;
+                    padding: 0;
+                    
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
                 }
 
                 td:nth-child(1) {
