--- a/src/app/components/Cart/index.module.scss
+++ b/src/app/components/Cart/index.module.scss
@@ -19,6 +19,10 @@
             aspect-ratio: 1/1;
         }
 
+        .title {
+            font-size: 1.4rem;
+        }
+
         .cost-row {
             display: flex;
             justify-content: space-between;
@@ -27,6 +31,34 @@
                 display: grid;
                 grid-template-columns: 20px 10ch 20px;
                 place-items: center;
+
+                button {
+                    background-color: transparent;
+                    border-color: transparent;
+                    padding: 10px;
+                    line-height: 1;
+                    font-size: 1.5rem;
+                    transition: all 0.2s linear;
+                    cursor: pointer;
+
+                    &:hover {
+                        border: 2px solid variables.$light-bg;
+                    }
+                }
+
+                .quantity,
+                button {
+                    font-size: 1.5rem;
+                    font-weight: bold;
+                }
+            }
+            .price {
+                font-size: 1.8rem;
+                font-weight: bold;
+                font-style: italic;
+                letter-spacing: 2px;
+                color: variables.$dark-bg;
+                line-height: 2;
             }
 
             .add-button {}
