--- a/src/app/components/Cart/index.module.scss
+++ b/src/app/components/Cart/index.module.scss
@@ -1,5 +1,34 @@
 @use '../../assets/scss/variables' as variables;
 
+
+.title-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    button.action-button {
+        background-color: variables.$dark-bg;
+        border: 2px solid #1976d2;
+        color: #fff;
+        letter-spacing: 1px;
+        cursor: pointer;
+        padding: 8px 11px;
+        transition: all 0.2s ease-in-out;
+        font-weight: bold;
+        font-family: monospace;
+        font-size: 18px;
+        line-height: 1;
+        width: 100%;
+
+        &:hover {
+            text-shadow: 1px 0px 3px white;
+            transform: scale(1.03);
+        }
+    }
+
+    
+}
+
 .products {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -52,6 +81,7 @@
                     font-weight: bold;
                 }
             }
+
             .price {
                 font-size: 1.8rem;
                 font-weight: bold;
@@ -61,32 +91,8 @@
                 line-height: 2;
             }
 
-            .add-button {}
+            .action-button {}
         }
-
-
-        button.add-button {
-            background-color: variables.$dark-bg;
-            border: 2px solid #1976d2;
-            color: #fff;
-            letter-spacing: 1px;
-            cursor: pointer;
-            padding: 8px 11px;
-            transition: all 0.2s ease-in-out;
-            font-weight: bold;
-            font-family: monospace;
-            font-size: 18px;
-            line-height: 1;
-            width: 100%;
-
-            &:hover {
-                text-shadow: 1px 0px 3px white;
-                transform: scale(1.03);
-            }
-        }
-
 
     }
-
-
 }
