--- a/src/app/components/Orders/index.module.scss
+++ b/src/app/components/Orders/index.module.scss
@@ -1,9 +1,13 @@
 .orders-container {
+
+    .order-obj-wrapper {
+
+        border: 1px solid grey;
+    }
     
     .order-table {
         
         width: 100%;
-        border: 1px solid grey;
         
         thead {
             background-color: #c8c6c6;
@@ -51,5 +55,22 @@
                 td:last-child {}
             }
         }
+    }
+
+    .timestamp-row {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        > div {
+            letter-spacing: 2px;
+            font-weight: 200;
+            font-family: monospace;
+            font-size: 1rem;
+            margin-left: auto;
+            margin-right: 0;
+        }
+
+
     }
 }
