--- a/src/app/components/HomePage/index.module.scss
+++ b/src/app/components/HomePage/index.module.scss
@@ -5,7 +5,33 @@
     grid-template-columns: 200px auto;
     gap: 30px;
 
-    .filters {}
+    .filters {
+        h4{
+            margin-block: 0;
+        }
+        > *:not(:last-of-type) {
+            position: relative;
+            padding-bottom: 10px;
+            margin-bottom: 10px;
+        }
+        > *:not(:last-of-type)::after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            left: 0;
+            bottom: 0;
+            background-color: #cbcbcb;
+            -webkit-mask: linear-gradient(90deg , transparent, white 40%, white 60%, transparent);
+            mask: linear-gradient(90deg , transparent, white 40%, white 60%, transparent);
+        }
+    }
+    
+    .filters-container {
+        .slider {
+            padding-inline: 10px;
+        }
+    }
 
     .products {
         display: grid;
