--- a/src/app/components/Navbar/index.module.scss
+++ b/src/app/components/Navbar/index.module.scss
@@ -1,6 +1,9 @@
 @use '../../assets/scss/_variables.scss' as variables;
 
 .main-nav {
+    position: sticky;
+    top: 0;
+    z-index: 22;
     background-color: variables.$dark-bg;
     display: flex;
     justify-content: space-between;
